--- a/lib/changelog_web/templates/admin/episode/_form.html.heex
+++ b/lib/changelog_web/templates/admin/episode/_form.html.heex
@@ -183,7 +183,7 @@
 
           <h4 class="ui sponsor header">
             #<span class="js-position-display"><%= i.data.position || i.params["position"] %></span> &mdash;
-            <%= link(sponsor.name, to: ~p"/admin/sponsors/#{sponsor}", rel: "external") %>
+            <%= link(sponsor.name, to: ~p"/admin/sponsors/#{sponsor}", rel: "external", "up-target": ".main-target", "up-instant": true, "up-preload": true, "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
           </h4>
 
           <div class="fields">
