--- a/lib/changelog_web/templates/admin/episode/index.html.eex
+++ b/lib/changelog_web/templates/admin/episode/index.html.eex
@@ -1,6 +1,6 @@
 <div class="ui basic segment">
   <h1 class="ui dividing header">
-    <%= link("Podcasts", to: ~p"/admin/podcasts") %>
+    <%= link("Podcasts", to: ~p"/admin/podcasts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <%= render(PodcastView, "_dropdown_list.html", assigns) %>
     <%= @podcast.name %>
   </h1>
@@ -15,7 +15,7 @@
       <button class="ui basic icon button" title="View Schedule"><i class="calendar icon"></i></button>
     </span>
 
-    <%= link to: ~p"/admin/podcasts/#{@podcast.slug}/episodes/new", class: "ui right floated primary basic button" do %>
+    <%= link to: ~p"/admin/podcasts/#{@podcast.slug}/episodes/new", class: "ui right floated primary basic button", "up-target": ".main-target", "up-instant": true, "up-preload": true do %>
       <i class="icon unmute"></i>
       Add Episode
     <% end %>
@@ -45,7 +45,7 @@
 
 <%= if Enum.any?(@episode_requests) do %>
 <div class="ui basic segment">
-  <h2 class="ui header"><%= link("Requests", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests") %>
+  <h2 class="ui header"><%= link("Requests", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
   &raquo;
   Fresh (<%= length(@episode_requests) %>)
   </h2>
