--- a/lib/changelog_web/templates/admin/episode/new.html.eex
+++ b/lib/changelog_web/templates/admin/episode/new.html.eex
@@ -1,6 +1,6 @@
 <div class="ui basic segment text container">
   <h1 class="ui dividing header">
-    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes") %>
+    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <%= render(PodcastView, "_dropdown_list.html", assigns) %>
     New Episode
   </h1>
