--- a/lib/changelog_web/templates/admin/episode_request/_form.html.eex
+++ b/lib/changelog_web/templates/admin/episode_request/_form.html.eex
@@ -56,7 +56,7 @@
     <div class="column"><%= AdminHelpers.submit_button(:secondary, "Save and Close", AdminHelpers.next_param(@conn)) %></div>
     <div class="column">
     <%= if Changelog.Policies.Admin.EpisodeRequest.delete(@current_user, @podcast) do %>
-      <%= link("Delete", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests/#{f.data}/fail", class: "ui red fluid basic button", method: :delete, data: [confirm: "Are you sure?"]) %>
+      <%= link("Delete", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests/#{f.data}/fail", class: "ui red fluid basic button", method: :delete, data: [confirm: "Are you sure?"], "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <% end  %>
     </div>
   </div>
