--- a/lib/changelog_web/templates/admin/episode_request/edit.html.eex
+++ b/lib/changelog_web/templates/admin/episode_request/edit.html.eex
@@ -1,10 +1,10 @@
 <div class="ui basic segment">
   <h1 class="ui dividing header">
-    <%= link("Podcasts", to: ~p"/admin/podcasts") %>
+    <%= link("Podcasts", to: ~p"/admin/podcasts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <%= render(PodcastView, "_dropdown_list.html", assigns) %>
-    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes") %>
+    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     &raquo;
-    <%= link("Episode Requests", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests") %>
+    <%= link("Episode Requests", to: ~p"/admin/podcasts/#{@podcast.slug}/episode_requests", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     &raquo;
     <%= @request.id %>
 
