--- a/lib/changelog_web/templates/admin/episode_request/index.html.eex
+++ b/lib/changelog_web/templates/admin/episode_request/index.html.eex
@@ -1,15 +1,15 @@
 <div class="ui basic segment">
   <h1 class="ui dividing header">
-    <%= link("Podcasts", to: ~p"/admin/podcasts") %>
+    <%= link("Podcasts", to: ~p"/admin/podcasts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <%= render(PodcastView, "_dropdown_list.html", assigns) %>
-    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes") %>
+    <%= link(@podcast.name, to: ~p"/admin/podcasts/#{@podcast.slug}/episodes", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     &raquo;
     Episode Requests
     <%= link("(View)", to: ~p"/#{@podcast.slug}", class: "view") %>
   </h1>
 
   <div class="actions right">
-    <%= link to: ~p"/admin/podcasts/#{@podcast.slug}/episodes/new", class: "ui right floated primary basic button" do %>
+    <%= link to: ~p"/admin/podcasts/#{@podcast.slug}/episodes/new", class: "ui right floated primary basic button", "up-target": ".main-target", "up-instant": true, "up-preload": true do %>
       <i class="icon unmute"></i>
       Add Episode
     <% end %>
