--- a/lib/changelog_web/templates/admin/podcast/_dropdown_list.html.eex
+++ b/lib/changelog_web/templates/admin/podcast/_dropdown_list.html.eex
@@ -6,7 +6,7 @@
   <div class="menu">
   <%= for podcast <- linkable do %>
     <%= if Policies.Admin.Podcast.show(@current_user, podcast) do %>
-      <%= link(podcast.name, to: ~p"/admin/podcasts/#{podcast.slug}/episodes", class: "item") %>
+      <%= link(podcast.name, to: ~p"/admin/podcasts/#{podcast.slug}/episodes", class: "item", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     <% end %>
   <% end %>
   </div>
