--- a/lib/changelog_web/templates/admin/sponsor/index.html.eex
+++ b/lib/changelog_web/templates/admin/sponsor/index.html.eex
@@ -5,7 +5,7 @@
   </h1>
 
   <div class="actions">
-    <%= link to: ~p"/admin/sponsors/new", class: "ui right floated primary basic button" do %>
+    <%= link to: ~p"/admin/sponsors/new", class: "ui right floated primary basic button", "up-target": ".main-target", "up-instant": true, "up-preload": true do %>
       <i class="dollar icon"></i>
       Add Sponsor
     <% end %>
