--- a/lib/changelog_web/templates/episode/show.html.eex
+++ b/lib/changelog_web/templates/episode/show.html.eex
@@ -256,7 +256,7 @@
       </section>
 
       <div class="episode-body-pagination">
-        <%= link("View all episodes", to: ~p"/#{@podcast.slug}", class: "button") %>
+        <%= link("View all episodes", to: ~p"/#{@podcast.slug}", class: "button", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
       </div>
     </div>
   </div>
