--- a/lib/changelog_web/templates/home/_nav.html.eex
+++ b/lib/changelog_web/templates/home/_nav.html.eex
@@ -1,7 +1,7 @@
 <nav class="subnav">
   <ul class="subnav-list">
     <li class="subnav-list-item <%= SharedHelpers.active_class(@conn, ["home-show"]) %>">
-      <%= link("Subscriptions", to: ~p"/~") %>
+      <%= link("Subscriptions", to: ~p"/~", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     </li>
     <li class="subnav-list-item <%= SharedHelpers.active_class(@conn, ["home-profile"]) %>">
       <%= link to: ~p"/~/profile" do %>
@@ -9,11 +9,11 @@
       <% end %>
     </li>
     <li class="subnav-list-item <%= SharedHelpers.active_class(@conn, ["home-account"]) %>">
-      <%= link("Account", to: ~p"/~/account") %>
+      <%= link("Account", to: ~p"/~/account", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     </li>
   <%= for sponsor <- @current_user.sponsors do %>
     <li class="subnav-list-item">
-      <%= link(sponsor.name, to: ~p"/sponsor/#{sponsor.id}") %>
+      <%= link(sponsor.name, to: ~p"/sponsor/#{sponsor.id}", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
     </li>
   <% end %>
   </ul>
