--- a/lib/changelog_web/templates/home/show.html.eex
+++ b/lib/changelog_web/templates/home/show.html.eex
@@ -23,7 +23,7 @@
         <p>Connect with like-minded developers from all over the world. Hang with us and Slack in realtime during our live shows. Be the first to hear about upcoming shows and projects. This is your all-access pass to everything we do.</p>
 
         <div class="account_ctas-item-info-buttons">
-          <%= link("Request Invite", to: ~p"/~/slack", method: :post) %>
+          <%= link("Request Invite", to: ~p"/~/slack", method: :post, "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
           <%= link("Launch Slack", to: "https://changelog.slack.com", target: "_blank") %>
         </div>
       </div>
