--- a/lib/changelog_web/templates/layout/_header.html.eex
+++ b/lib/changelog_web/templates/layout/_header.html.eex
@@ -7,20 +7,20 @@
         <div class="header-nav-wrap">
           <ul class="header-nav-primary header-nav-list">
             <li class="header-nav-list-item <%= SharedHelpers.active_class(@conn, ["page-index", "podcast"]) %>">
-              <%= link("Podcasts", to: ~p"/", title: "Changelog Podcasts") %>
+              <%= link("Podcasts", to: ~p"/", title: "Changelog Podcasts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
             </li>
             <li class="header-nav-list-item <%= SharedHelpers.active_class(@conn, ["album-index", "album"]) %>">
-              <%= link("Beats", to: ~p"/beats", title: "Changelog Beats") %>
+              <%= link("Beats", to: ~p"/beats", title: "Changelog Beats", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
             </li>
             <li class="header-nav-list-item <%= SharedHelpers.active_class(@conn, ["post"]) %>">
-              <%= link("Posts", to: ~p"/posts", title: "Changelog Posts") %>
+              <%= link("Posts", to: ~p"/posts", title: "Changelog Posts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
             </li>
             <li class="header-nav-list-item <%= SharedHelpers.active_class(@conn, ["page-community", "person-join"]) %>">
-              <%= link("Community", to: ~p"/community", title: "Changelog Community") %>
+              <%= link("Community", to: ~p"/community", title: "Changelog Community", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
             </li>
           <%= if !@current_user do %>
             <li class="header-nav-list-item <%= SharedHelpers.active_class(@conn, ["person-subscribe"]) %>">
-              <%= link("Subscribe", to: ~p"/subscribe") %>
+              <%= link("Subscribe", to: ~p"/subscribe", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
             </li>
           <% end %>
           <%= if SharedHelpers.controller_action_combo(@conn) != "page-ten" do %>
@@ -33,10 +33,10 @@
           <div class="header-nav-secondary">
             <ul class="header-nav-list">
               <li class="header-nav-list-item header-nav-list-item--live is-hidden <%= SharedHelpers.active_class(@conn, ["live"]) %> js-live-indicator">
-                <%= link("Live", to: ~p"/live", title: "Listen Live") %>
+                <%= link("Live", to: ~p"/live", title: "Listen Live", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
               </li>
               <li class="header-nav-list-item is-desktop_only">
-                <%= link("Submit News", to: ~p"/news/submit", class: "header-button", title: "Submit News") %>
+                <%= link("Submit News", to: ~p"/news/submit", class: "header-button", title: "Submit News", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
               </li>
             </ul>
 
@@ -49,14 +49,18 @@
               <div class="tooltip-wrap">
                 <ul class="tooltip-list">
                   <%= if Policies.Admin.Page.index(@current_user) do %>
-                    <li><%= link("Admin", to: ~p"/admin") %></li>
+                    <li><%= link("Admin", to: ~p"/admin", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
                   <% end %>
                 <%= if @current_user.public_profile do %>
                   <li><%= link("My Profile", to: PersonView.profile_path(@current_user)) %></li>
                 <% end %>
-                  <li><%= link("My Subscriptions", to: ~p"/~") %></li>
-                  <li><%= link("Profile Settings", to: ~p"/~/profile") %></li>
-                  <li><%= link("Account Settings", to: ~p"/~/account") %></li>
+                  <li><%= link("My Subscriptions", to: ~p"/~", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
+                  <li><%= link("Profile Settings", to: ~p"/~/profile", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
+                  <li><%= link("Account Settings", to: ~p"/~/account", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
                 </ul>
                 <div class="tooltip-footer">
                   <%= link("Sign Out", to: Routes.sign_out_path(@conn, :delete)) %>
@@ -65,7 +69,7 @@
             </div>
           <% else %>
             <ul class="header-nav-list">
-              <li class="header-nav-list-item"><%= link("Sign In", to: ~p"/in", class: "header-button", title: "Sign In") %></li>
+              <li class="header-nav-list-item"><%= link("Sign In", to: ~p"/in", class: "header-button", title: "Sign In", "up-target": ".main-target", "up-instant": true, "up-preload": true) %></li>
             </ul>
           <% end %>
 
@@ -91,15 +95,21 @@
       <div class="mobile_nav-main-inner">
         <p class="mobile_nav-logo"><%= link("Changelog", to: "/", title: "Go $HOME") %></p>
         <ul class="mobile_nav-list">
-          <li class="mobile_nav-list-item"><%= link("Podcasts", to: ~p"/podcasts") %></li>
-          <li class="mobile_nav-list-item"><%= link("Beats", to: ~p"/beats") %></li>
-          <li class="mobile_nav-list-item"><%= link("Posts", to: ~p"/posts") %></li>
-          <li class="mobile_nav-list-item"><%= link("Community", to: ~p"/community") %></li>
+          <li class="mobile_nav-list-item"><%= link("Podcasts", to: ~p"/podcasts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
+          <li class="mobile_nav-list-item"><%= link("Beats", to: ~p"/beats", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
+          <li class="mobile_nav-list-item"><%= link("Posts", to: ~p"/posts", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
+          <li class="mobile_nav-list-item"><%= link("Community", to: ~p"/community", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
         <%= if !@current_user do %>
-          <li class="mobile_nav-list-item"><%= link("Subscribe", to: ~p"/subscribe") %></li>
+          <li class="mobile_nav-list-item"><%= link("Subscribe", to: ~p"/subscribe", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
         <% end %>
           <li class="mobile_nav-list-item"><a href="<%= ~p"/++" %>" title="Join Changelog++">Changelog++</a></li>
-          <li class="mobile_nav-list-item"><%= link("Submit News", to: ~p"/news/submit") %></li>
+          <li class="mobile_nav-list-item"><%= link("Submit News", to: ~p"/news/submit", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
         </ul>
       </div>
     </div>
