--- a/lib/changelog_web/templates/layout/app.html.heex
+++ b/lib/changelog_web/templates/layout/app.html.heex
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#59B287">
+    <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css">
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Enable caching globally
+      up.network.config.cache = true;
+
+      // Set cache expiration to 60 seconds
+      up.network.config.expiry = 60000;
+    });
+  </script>
     <title><%= Meta.Title.get(@conn) %></title>
     <link rel="canonical" href={Meta.Url.get(:canonical, @conn) || current_url(@conn)}>
     <meta name="description" content={Meta.Description.get(@conn)}>
@@ -53,7 +64,7 @@
     <script defer src={url(~p"/js/app.js")}></script>
     <%= render("_head_scripts.html", assigns) %>
   </head>
-  <body class={"page-" <> SharedHelpers.controller_action_combo(@conn)}>
+  <body class={"main-target page-" <> SharedHelpers.controller_action_combo(@conn)}>
     <!--[if lt IE 8]>
       <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
