--- a/lib/changelog_web/templates/layout/news.html.heex
+++ b/lib/changelog_web/templates/layout/news.html.heex
@@ -56,7 +56,8 @@
               </a>
             </div>
             <h1 class="display-xl">Changelog News! The software <span class="flippy">newsletter</span> that's also a <span class="floppy">podcast</span></h1>
-            <p class="sans-md color-grey"><em>The software world moves fast... keep up the easy way! Let us track changes & <%= link("Jerod", to: ~p"/person/jerodsanto") %> will let you know what's up each Monday.</em></p>
+            <p class="sans-md color-grey"><em>The software world moves fast... keep up the easy way! Let us track changes & <%= link("Jerod", to: ~p"/person/jerodsanto", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+ will let you know what's up each Monday.</em></p>
 
             <%= form_tag ~p"/subscribe/news", class: "subscribe_form m-t-sm", method: "get" do %>
               <label for="email" class="visually-hidden">Email Address</label>
@@ -89,7 +90,8 @@
                 <li>But every once in awhile, one slips through...</li>
                 <li>A dev has a problem, decides to use Java, now has a ProblemFactory.</li>
                 <li>Oh nice, that joke was better than you expected.</li>
-                <li>We feature the best community <%= link("submissions", to: ~p"/news/submit") %>.</li>
+                <li>We feature the best community <%= link("submissions", to: ~p"/news/submit", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+.</li>
                 <li>Each episode is chapter'd for easy navigation.</li>
                 <li>Who else takes the time to list 27 reasons to subscribe?!</li>
                 <li>We hand-pick our partners so even the ads are useful!</li>
@@ -97,11 +99,14 @@
                 <li>You like receiving email, but not the spammy stuff.</li>
                 <li>We like sending email, but not the spammy stuff.</li>
                 <li>Sometimes we take meme breaks, which are on point.</li>
-                <li>Like the one from <%= link("issue #66", to: ~p"/news/66") %> is funny... if you commit to it.</li>
+                <li>Like the one from <%= link("issue #66", to: ~p"/news/66", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+ is funny... if you commit to it.</li>
                 <li>Emoji are lovingly sprinkled on. Not too much! Just a pinch 🤌</li>
-                <li>You get to enjoy the freshest Breakmaster Cylinder <%= link("Beats", to: ~p"/beats") %></li>
+                <li>You get to enjoy the freshest Breakmaster Cylinder <%= link("Beats", to: ~p"/beats", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
                 <li>Your colleagues will be <em>so impressed</em> by how plugged in you are.</li>
-                <li>We've been known to <code>ORDER BY LENGTH(title) ASC</code>. <%= link("Seriously", to: ~p"/news/86") %></li>
+                <li>We've been known to <code>ORDER BY LENGTH(title) ASC</code>. <%= link("Seriously", to: ~p"/news/86", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
                 <li>You can reply! We read every message & respond to many.</li>
                 <li>We keep our word. This is the 27th (!) reason to subscribe.</li>
               </ol>
@@ -167,7 +172,8 @@
 
           <div class="header-ctas">
             <button class="text_button m-b-sm" onclick="news.toggleReasons();">27 more reasons to subscribe</button>
-            <p class="mono-sm color-grey">Don't forget to check out <%= link("our other podcasts", to: ~p"/") %></p>
+            <p class="mono-sm color-grey">Don't forget to check out <%= link("our other podcasts", to: ~p"/", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</p>
           </div>
         </div>
       </header>
