--- a/lib/changelog_web/templates/page/contact.html.eex
+++ b/lib/changelog_web/templates/page/contact.html.eex
@@ -8,7 +8,8 @@
 
     <p><%= link("Submit news", to: Routes.news_item_path(@conn, :new)) %> for publishing consideration.</p>
 
-    <p><%= link("Start here", to: ~p"/sponsor") %> for sponsorship opportunities.</p>
+    <p><%= link("Start here", to: ~p"/sponsor", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+ for sponsorship opportunities.</p>
 
     <p><a href="https://github.com/thechangelog/changelog.com/issues">Open an issue</a> with bug reports and feature requests.</p>
 
