--- a/lib/changelog_web/templates/podcast/_header_landing.html.eex
+++ b/lib/changelog_web/templates/podcast/_header_landing.html.eex
@@ -61,7 +61,7 @@
       <% @podcast.status == :inactive -> %>
         <p class="show-header-signup_text">This podcast is not currently in production. <%= link("Head here", to: Routes.podcast_path(@conn, :index)) %> for more awesome podcasts.</p>
       <% !Podcast.has_feed(@podcast) -> %>
-        <p>You can only subscribe to <em><%= @podcast.name %></em> by subscribing to our <%= link("Master Feed", to: Routes.podcast_path(@conn, :show, "master")) %></p>
+        <p>You can only subscribe to <em><%= @podcast.name %></em> by subscribing to our <%= link("Master Feed", to: Routes.podcast_path(@conn, :show, "master"), "up-target": ".main-target", "up-instant": true, "up-preload": true) %></p>
       <% Podcast.is_a_changelog_pod(@podcast) -> %>
         <%= render("_news_subscribe.html", assigns) %>
         <%= render("_subscribe_buttons.html", assigns) %>
