--- a/lib/changelog_web/templates/podcast/_summary.html.heex
+++ b/lib/changelog_web/templates/podcast/_summary.html.heex
@@ -22,7 +22,8 @@
         <%= for person <- Enum.take_random(@podcast.active_hosts, 3) do %>
           <li><%= link(person.name, to: PersonView.profile_path(person)) %></li>
         <% end %>
-          <li><%= link("and more...", to: ~p"/#{@podcast.slug}") %></li>
+          <li><%= link("and more...", to: ~p"/#{@podcast.slug}", "up-target": ".main-target", "up-instant": true, "up-preload": true) %>
+</li>
       <% else %>
         <%= for person <- @podcast.active_hosts do %>
           <li><%= link(person.name, to: PersonView.profile_path(person)) %></li>
